Established font-size and line-height. Fixed uneven margin on quote section of css.

--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,84 @@
-body {
-    margin: 1em;
-    padding: 1em;
+@media screen and (min-width: 410px) {       
+    
+    html{
+        font-size: 1em;
+        line-height: normal;
+    }
 
-    background-color: rgb(241, 241, 241);
-}
+    body {
+        margin: 1em;
+        padding: 1em;
 
-article{
-    margin-top: 1em;
-    border: 2px solid rgb(143, 255, 213);
-    border-radius: 8px;
-    width: 75%;
+        background-color: rgb(241, 241, 241);
+    }
 
-    font-family: Arial Narrow;
-}
+    article{
+        margin-top: 1em;
+        border: 2px solid rgb(143, 255, 213);
+        border-radius: 8px;
+        width: 75%;
 
-#header{
-    /*background-color: rgb(66, 245, 194);*/
-    background-color: rgb(143, 255, 213);
-    color: rgb(84, 92, 89);
-    padding: 1em;
-    font-size: 100%;
-    font-family: Arial Narrow;
-}
+        font-family: Arial Narrow;
+    }
 
-nav a{
-    background-color: rgb(180, 180, 180);
-    color: white;
+    #header{
+        /*background-color: rgb(66, 245, 194);*/
+        background-color: rgb(143, 255, 213);
+        color: rgb(84, 92, 89);
+        padding: 1em;
+        font-size: 100%;
+        font-family: Arial Narrow;
+    }
 
-    padding-right: 1em;
-    padding-left: 1em;
-    padding-top: 0.1em;
-    padding-bottom: 0.1em;
-    border-radius: 4px;
-    margin-right: 1em;
-}
+    nav a{
+        background-color: rgb(180, 180, 180);
+        color: white;
 
-#quote {
-    font-style: italic;
-    font-size: 125%;
-    font-family: Arial Narrow;
+        padding-right: 1em;
+        padding-left: 1em;
+        padding-top: 0.1em;
+        padding-bottom: 0.1em;
+        border-radius: 4px;
+        margin-right: 1em;
+    }
 
-    padding-bottom: -1em;
-    margin: 1em;
-    border-bottom: 1px solid rgb(84, 92, 89);
-    width: 75%;
-}
+    #quote {
+        font-style: italic;
+        font-size: 125%;
+        font-family: Arial Narrow;
 
-#article p{
-    font-size: 100%;
-    text-indent: 1em;
+        padding-bottom: -1em;
+        
+        border-bottom: 1px solid rgb(84, 92, 89);
+        width: 75%;
+    }
 
-    margin: 1em;
-}
+    #article p{
+        font-size: 100%;
+        text-indent: 1em;
 
-#article h2{
-    font-size: 150%;
+        margin: 1em;
 
-    margin: 1em;
-}
 
-#article h3{
-    font-size: 125%;
+    }
 
-    margin: 1em;
-}
+    #article h2{
+        font-size: 150%;
 
-#article img{
-    width:50%;
-}
+        margin: 1em;
+    }
 
-#resume{
-    padding: 1em;
+    #article h3{
+        font-size: 125%;
+
+        margin: 1em;
+    }
+
+    #article img{
+        width:50%;
+    }
+
+    #resume{
+        padding: 1em;
+    }
 }
